[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/bat/evilbat.gd" type="Script" id=1]
[ext_resource path="res://characters/bat/evilbat.svg" type="Texture" id=2]
[ext_resource path="res://accessoires/xmas_hat.svg" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 37.7908

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 296.854, 378.12 )

[node name="evilbat" type="RigidBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = -1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )

[node name="collision" type="CollisionShape2D" parent="."]

position = Vector2( -0.814514, 6.51607 )
shape = SubResource( 1 )

[node name="attack_area" type="Area2D" parent="."]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]

position = Vector2( 3.35892, 291.177 )
shape = SubResource( 2 )

[node name="base" type="Node2D" parent="."]

[node name="evilbat" type="Sprite" parent="base"]

position = Vector2( 0.480107, 0.761524 )
texture = ExtResource( 2 )

[node name="xmas_hat" type="Sprite" parent="base"]

position = Vector2( 16.0525, -42.3231 )
rotation = 0.113881
scale = Vector2( 1.37786, 1.36051 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_evilbat_body_entered"]

[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]

[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]


